# IOPanel

./: .gitignore  .pre-commit-config.yaml  CT400_updated.py  LICENSE.md  README.md  app.py  build.py  camera.py  config.ini  config_model.py  control_panel.py  find_piezos.py  get_cameras_info.py  gui_panels.py  main_window.py  output.prof  profile_output.prof  pyproject.toml  resources.qrc  resources_rc.py  startup.prof  styles.py
hardware/: alignment_worker.py  camera.py  camera_init_worker.py  ct400.py  ct400_init_worker.py  ct400_types.py  dummy_ct400.py  interfaces.py  piezo.py  piezo_init_worker.py
logic/: task_runner.py
resources/: resources.qrc  resources_rc.py
tests/: test_camera_widgets.py
ui/: alignment_panel.py  camera_widgets.py  constants.py  control_panel.py  discovery_dialog.py  main_window.py  plot_widgets.py  theme.py
