[project]
name = "IOPanel"
version = "0.3.0"
description = "A robust GUI for controlling photonics lab equipment, including cameras and wavelength scanners."
authors = [
    { name = "Simone Ferraresi", email = "simone.ferraresi@unife.it" },
]
readme = "README.md"
license = { file = "LICENSE" } # Changed from 'text' to 'file' to point to your new LICENSE file
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]

# --- Core Dependencies ---
# These are required for the application to run.
dependencies = [
    "PySide6>=6.6.0",
    "numpy>=1.23.0",
    "pyqtgraph>=0.13.0",
    "scipy>=1.9.0", # For .mat file saving
    "opencv-python-headless>=4.7.0", # Headless version is smaller and sufficient
    "vmbpy>=1.10.0", # Make sure to specify the version you are using
    "pydantic>=2.0.0", # For robust configuration management
]

[project.optional-dependencies]
# --- Optional Dependencies ---
# Use this for features that are not strictly required, like MATLAB integration.
# To install: uv pip install -e ".[matlab]"
matlab = [
    "matlabengine", # The package name for the MATLAB Engine
]
test = [
    "pytest>=8.0.0",
    "pytest-qt>=4.0.0",
    "pytest-cov>=4.0.0", # For checking test coverage
]
dev = [
    "pre-commit>=3.0.0",
    "PyInstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/simoneferraresi/IOPanel"
"Bug Tracker" = "https://github.com/simoneferraresi/IOPanel/issues"

# --- Tool Configuration ---

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
# Set the lowest Python version you support.
target-version = "py310"
line-length = 120

# A selection of good default rules.
# E/W -> pycodestyle, F -> Pyflakes, I -> isort (import sorting), UP -> pyupgrade
select = ["E", "F", "W", "I", "UP"]

# Exclude the auto-generated resources_rc.py file from linting.
exclude = [
    "resources/resources_rc.py",
    ".venv",
]